// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches App snapshot 1`] = `
<DocumentFragment>
  <div>
    <div>
      <h1>
        Todo List
      </h1>
      <form>
        <label
          for="task"
        >
          Task:
        </label>
        <input
          id="task"
          value=""
        />
        <button>
          Add Todo
        </button>
      </form>
    </div>
  </div>
</DocumentFragment>
`;

exports[`matches NewTodoForm snapshot 1`] = `
<DocumentFragment>
  <form>
    <label
      for="task"
    >
      Task:
    </label>
    <input
      id="task"
      value=""
    />
    <button>
      Add Todo
    </button>
  </form>
</DocumentFragment>
`;

exports[`matches Todo snapshot 1`] = `
<DocumentFragment>
  <div
    data-testid="todo"
  >
    <span>
      Walk the dogs
    </span>
    <button>
      X
    </button>
  </div>
</DocumentFragment>
`;

exports[`matches TodoList snapshot 1`] = `
<DocumentFragment>
  <div>
    <h1>
      Todo List
    </h1>
    <form>
      <label
        for="task"
      >
        Task:
      </label>
      <input
        id="task"
        value=""
      />
      <button>
        Add Todo
      </button>
    </form>
  </div>
</DocumentFragment>
`;
